<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.iyubinest.app.MainActivity"
    >

  <android.support.design.widget.TextInputLayout
      android:id="@+id/login_username_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/login_username_wrapper"
      >

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/login_password_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/login_password_wrapper"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_username_wrapper"
      >

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

  </android.support.design.widget.TextInputLayout>

  <TextView
      android:id="@+id/login_singup_link"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login_singup_link"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_password_wrapper"
      />

  <TextView
      android:id="@+id/login_forgot_link"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login_forgot_link"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_singup_link"
      />

  <Button
      android:id="@+id/login_init"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:enabled="false"
      android:text="@string/login_init"
      app:layout_constraintBottom_toBottomOf="parent"
      />

</android.support.constraint.ConstraintLayout>
