<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.design.widget.TextInputLayout
      android:id="@+id/signup_username_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/signup_username_wrapper"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <EditText
        android:id="@+id/singup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/signup_email_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/signup_email_wrapper"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signup_username_wrapper"
      >

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/signup_password_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/signup_password_wrapper"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signup_email_wrapper"
      >

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/signup_password_confirm_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/signup_password_confirm_wrapper"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signup_password_wrapper"
      >

    <EditText
        android:id="@+id/signup_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/singup_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/signup_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.05"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/signup_password_confirm_wrapper"
      app:layout_constraintVertical_bias="0.95"
      />

</android.support.constraint.ConstraintLayout>